--- a/roles/kafka-config/tasks/kafka-config.yml
+++ b/roles/kafka-config/tasks/kafka-config.yml
@@ -3,7 +3,7 @@
 - name: Copy Apache Kafka configuration.
   template:
     src=server.properties.j2 
-    dest="/opt/kafka/config/server.properties_copy"
+    dest=/opt/kafka/config/server.properties
     owner=Guenter.Hesse group=users
     mode=777
 
