Send each sensor value individually
* adaption of application.conf - contains more realistic values now

* removing unused config parameters

* considering value firstDataColumn when selecting values to send

* changes WRT pr feedback: better validation separation and further minor changes

* changing config structure as described in PR comment - if column definition is empty, send whole line; introduce possibility to define start end end column for sending

* dont send record/values if number of values != number of columns specified

* fix for wrong log msg

* fix: two cols were missing in config

* removing optional kafka topic - for sending whole line, the definition of a single topic/col is enough

* simplifying config validation check; removing unreachable code

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,5 @@
-datasender.dataInputPath = "tbd.csv"
-datasender.sendingInterval = 0
-datasender.kafkaTopic = "tbdTopic"
-datasender.columnToBeSend = -1
+datasender.dataInputPath = "/home/benchmarker/Benchmarks/ESB/Data/DEBS2012-5Minutes.txt"
+datasender.sendingInterval = 100
 datasender.columnDelimiter = "s+"
 datasender.numberOfThreads = 1
 datasender.kafkaProducer.bootstrapServers = "192.168.30.208:9092,192.168.30.207:9092,192.168.30.141:9092"
@@ -9,3 +7,9 @@ datasender.kafkaProducer.keySerializerClass = "org.apache.kafka.common.serializa
 datasender.kafkaProducer.valueSerializerClass = "org.apache.kafka.common.serialization.StringSerializer"
 datasender.kafkaProducer.acks = 0
 datasender.kafkaProducer.batchSize = 1
+
+datasender.dataModel.columns = ["ts", "index", "mf01", "mf02", "mf03", "pc13", "pc14", "pc15", "pc25", "pc26", "pc27", "res", "bm05", "bm06", "bm07", "bm08", "bm09", "bm10", "pp01", "pp02", "pp03", "pp04", "pp05",
+	"pp06", "pp07", "pp08", "pp09", "pp10", "pp11", "pp12", "pp13", "pp14", "pp15", "pp16", "pp17", "pp18", "pp19", "pp20", "pp21", "pp22", "pp23", "pp24", "pp25", "pp26", "pp27", "pp28", "pp29", "pp30", "pp31", "pp32",
+	"pp33", "pp34", "pp35", "pp36", "tbd1", "tbd2"]
+datasender.dataModel.columnStart = 2
+datasender.dataModel.columnEnd = 2
