--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ notifications:
   email:
     recipients:
       - guenter.hesse@hpi.de
-script: sbt clean compile test
+script: sbt clean compile test test:scalastyle scalastyle
