Delete kafka topic (#20)
* add ansible script to remove kafka topic folders from disk

* add scala script to remove kafka topics from zookeeper

* run whole process of topic deletion in one ansible script

--- a/tools/configuration/roles/kafka-service/tasks/main.yml
+++ b/tools/configuration/roles/kafka-service/tasks/main.yml
@@ -1,15 +1,9 @@
 ---
-- name: Start Kafka Service.
-  service: name=kafka state=started 
-  tags:
-    - start
+- include: tasks/start.yml
+  when: action == 'start'
 
-- name: Stop Kafka Service.
-  service: name=kafka state=stopped 
-  tags:
-    - stop
+- include: tasks/stop.yml
+  when: action == 'stop'
 
-- name: Restart Kafka Service.
-  service: name=kafka state=restarted 
-  tags:
-    - restart
+- include: tasks/restart.yml
+  when: action == 'restart'
