One query per job (#57)
* let flink consume from earliest position

* run single query in flink job

* pass arguments to flink job via command line

* add scale factor as benchmark argument

* add flink job runner

* add multijob runner

* set scaleFactor=1 as default

* catch exception during topic creation if exists

--- a/tools/commons/commons.conf
+++ b/tools/commons/commons.conf
@@ -1,4 +1,4 @@
 topicPrefix = "ESB"
-topicPostfix: "4"
-streams = ["A", "B", "C"]
+topicPostfix: "10"
 queries = ["Identity", "Statistics"]
+scaleFactor = 1
