--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,8 @@ modules.xml
 # Ansible files
 *.retry
 
-# validator results
-tools/validator/results/
+# results
+**/results/
 
 # configuration files
 **/*.conf
