Datasender config update (#103)
* add linger time and buffer memory size to config

* add default values to datasender.conf

* make bufferMemorySize long

* add time unit

* set singleColumnMode to false as default

* pass time unit to data producer

--- a/tools/datasender/datasender.conf
+++ b/tools/datasender/datasender.conf
@@ -1,11 +1,15 @@
 dataSenderConfig.sendingInterval = 10
+dataSenderConfig.timeUnit = "MICROSECONDS" # Java Timeunit Enum
 dataSenderConfig.numberOfThreads = 1
+dataSenderConfig.singleColumnMode = false
 
 kafkaProducerConfig.bootstrapServers = "192.168.30.208:9092,192.168.30.207:9092,192.168.30.141:9092"
 kafkaProducerConfig.keySerializerClass = "org.apache.kafka.common.serialization.StringSerializer"
 kafkaProducerConfig.valueSerializerClass = "org.apache.kafka.common.serialization.StringSerializer"
 kafkaProducerConfig.acks = 0
-kafkaProducerConfig.batchSize = 1000
+kafkaProducerConfig.batchSize = 100000 # default value in bytes
+kafkaProducerConfig.bufferMemorySize = 1000000000 # default value in bytes
+kafkaProducerConfig.lingerTime = 7 # default value in milliseconds
 
 dataReaderConfig.columns = ["value"]
 dataReaderConfig.dataColumnStart = 0
