--- a/tools/validator/src/main/resources/application.conf
+++ b/tools/validator/src/main/resources/application.conf
@@ -5,3 +5,8 @@ consumer.autoCommit = "true"
 consumer.autoCommitInterval = "1000"
 consumer.sessionTimeout = "30000"
 windowSize = 1000
+
+akka {
+	log-dead-letters = 0
+	log-dead-letters-during-shutdown = off
+}
