--- a/tools/validator/src/main/resources/validator.log4j.properties
+++ b/tools/validator/src/main/resources/validator.log4j.properties
@@ -16,9 +16,20 @@
 # limitations under the License.
 ################################################################################
 
-log4j.rootLogger=INFO, console
+log4j.appender.consoleInfoOnlyLog=org.apache.log4j.ConsoleAppender
+log4j.appender.consoleInfoOnlyLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.consoleInfoOnlyLog.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-c - %m%n
+log4j.appender.consoleInfoOnlyLog.filter.a=org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.consoleInfoOnlyLog.filter.a.LevelMin=INFO
+log4j.appender.consoleInfoOnlyLog.filter.a.LevelMax=INFO
 
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-c - %m%n
+log4j.category.consoleInfoOnlyLogger=INFO, consoleInfoOnlyLog
 
+log4j.appender.validationFileLog=org.apache.log4j.FileAppender
+log4j.appender.validationFileLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.validationFileLog.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-c - %m%n
+log4j.appender.validationFileLog.file=logs/validator.log
+
+log4j.category.senskaLogger=INFO, validationFileLog, consoleInfoOnlyLog
+
+log4j.rootLogger=OFF
