--- a/tools/commons/src/main/resources/log4j.properties
+++ b/tools/commons/src/main/resources/log4j.properties
@@ -16,8 +16,10 @@
 # limitations under the License.
 ################################################################################
 
-log4j.rootLogger=INFO, console
+log4j.rootLogger=OFF
 
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-c - %m%n
+log4j.appender.consoleLog=org.apache.log4j.ConsoleAppender
+log4j.appender.consoleLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.consoleLog.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-c - %m%n
+
+log4j.category.senskaLogger=INFO, consoleLog
