--- a/tools/validator/src/test/resources/log4j.properties
+++ b/tools/validator/src/test/resources/log4j.properties
@@ -16,8 +16,7 @@
 # limitations under the License.
 ################################################################################
 
-log4j.rootLogger=INFO, console
-
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-c - %m%n
+log4j.rootLogger=OFF
+log4j.category.consoleLogger=OFF
+log4j.category.consoleInfoOnlyLogger=OFF
+log4j.category.validationLogger=OFF
