Configure time datasender (#105)
* add time limit

* replay dataset once it has been sent before

* reset data iterator properly

* allow setting duration and duration time unit via config

--- a/tools/datasender/datasender.conf
+++ b/tools/datasender/datasender.conf
@@ -1,5 +1,7 @@
 dataSenderConfig.sendingInterval = 10
-dataSenderConfig.timeUnit = "MICROSECONDS" # Java Timeunit Enum
+dataSenderConfig.sendingIntervalTimeUnit = "MICROSECONDS" # Java Timeunit Enum
+dataSenderConfig.duration = 5
+dataSenderConfig.durationTimeUnit = "MINUTES" # Java Timeunit Enum
 dataSenderConfig.numberOfThreads = 1
 dataSenderConfig.singleColumnMode = false
 
@@ -7,11 +9,12 @@ kafkaProducerConfig.bootstrapServers = "192.168.30.208:9092,192.168.30.207:9092,
 kafkaProducerConfig.keySerializerClass = "org.apache.kafka.common.serialization.StringSerializer"
 kafkaProducerConfig.valueSerializerClass = "org.apache.kafka.common.serialization.StringSerializer"
 kafkaProducerConfig.acks = 0
-kafkaProducerConfig.batchSize = 100000 # default value in bytes
-kafkaProducerConfig.bufferMemorySize = 1000000000 # default value in bytes
-kafkaProducerConfig.lingerTime = 7 # default value in milliseconds
+kafkaProducerConfig.batchSize = 16384 # default value in bytes
+kafkaProducerConfig.bufferMemorySize = 33554432 # default value in bytes
+kafkaProducerConfig.lingerTime = 0 # default value in milliseconds
 
 dataReaderConfig.columns = ["value"]
 dataReaderConfig.dataColumnStart = 0
 dataReaderConfig.columnDelimiter = "\\s+"
 dataReaderConfig.dataInputPath = "/home/benchmarker/Benchmarks/ESB/Data/DEBS2012-5MinutesSingle.txt"
+dataReaderConfig.readInRam = false
