--- a/tools/datasender/datasender.conf
+++ b/tools/datasender/datasender.conf
@@ -1,5 +1,5 @@
-dataSenderConfig.sendingInterval = 10
-dataSenderConfig.sendingIntervalTimeUnit = "MICROSECONDS" # Java Timeunit Enum
+dataSenderConfig.sendingInterval = 10000
+dataSenderConfig.sendingIntervalTimeUnit = "NANOSECONDS" # Java Timeunit Enum
 dataSenderConfig.duration = 5
 dataSenderConfig.durationTimeUnit = "MINUTES" # Java Timeunit Enum
 dataSenderConfig.numberOfThreads = 1
