--- a/tools/configuration/plays/benchmark-runner.yml
+++ b/tools/configuration/plays/benchmark-runner.yml
@@ -3,9 +3,12 @@
 - hosts: 127.0.0.1
   connection: local
   tasks:
-    - name: "Set Topic Postfix."
-      include: ../roles/benchmark/tasks/set_topic_postfix.yml home=~ postfix="{{ topic_postfix }}"
-      when: topic_postfix is defined
+    - name: "Set Topic Prefix."
+      include: ../roles/benchmark/tasks/set_topic_prefix.yml home=~ prefix="{{ topic_prefix }}"
+      when: topic_prefix is defined
+    - name: "Set Benchmark Run."
+      include: ../roles/benchmark/tasks/set_benchmark_run.yml home=~ run="{{ benchmark_run }}"
+      when: benchmark_run is defined
     - name: "Set Sending Interval"
       include: ../roles/benchmark/tasks/set_sending_interval.yml home=~ interval="{{ sending_interval }}"
       when: sending_interval is defined
