Validator result merge (#124)
* make sending interval and sending duration part of benchmark arguments
* create result/series/scenario writer for datasender and validator
* add ansible scripts

--- a/tools/commons/commons.conf
+++ b/tools/commons/commons.conf
@@ -1,4 +1,9 @@
 topicPrefix = "ESB"
-benchmarkRun = 3
+benchmarkRun = 1
 queries = ["Identity", "Statistics"]
 scaleFactor = 1
+
+sendingInterval = 1000000
+sendingIntervalTimeUnit = "NANOSECONDS" # Java Timeunit Enum
+duration = 1
+durationTimeUnit = "MINUTES" # Java Timeunit Enum
